Reading instances and starting cromcoding

--- a/genetic_algo/cpp_code/makefile
+++ b/genetic_algo/cpp_code/makefile
@@ -10,7 +10,10 @@ CC = g++
 CFLAGS = -fno-omit-frame-pointer -Wshadow -Wno-unused-result -Wno-sign-compare -Wno-char-subscripts -std=c++20 -Wall -Wextra -g -DPIZZA
 
 main:
-	$(CC) $(CFLAGS) -o $(EXE) $(filename).cpp && $(EXE)
+	$(CC) $(CFLAGS) -o $(EXE) $(filename).cpp && $(EXE) $(filter-out $@,$(MAKECMDGOALS))
+%:
+	@:
+
 
 in:
 	$(CC) $(CFLAGS) -o $(EXE) $(filename).cpp && $(EXE) < input.txt
