Necessita de melhoria mas ta ai

--- a/genetic_algo/makefile
+++ b/genetic_algo/makefile
@@ -7,7 +7,7 @@ else
 endif
 
 CC = g++
-CFLAGS = -fno-omit-frame-pointer -Wshadow -Wno-unused-result -Wno-sign-compare -Wno-char-subscripts -std=c++20 -Wall -Wextra -g -DPIZZA
+CFLAGS = -Wshadow -Wno-unused-result -Wno-sign-compare -Wno-char-subscripts -std=c++20 -Wall -Wextra -g
 
 main:
 	$(CC) $(CFLAGS) -o $(EXE) $(filename).cpp && $(EXE) $(filter-out $@,$(MAKECMDGOALS))
